<resources>
    <string name="app_name">NFCExampleCode</string>
    <string name="action_settings">Settings</string>
    <string name="nfc_write_ndef">Write NFC NDEF Tag</string>
    <string name="nfc_read_tag">Read NFC Tag</string>
    <string name="nfc_push_ndef">Push NDEF messages</string>
    <string name="nfc_card_reader">NFC card reader</string>
    <string name="nfc_internal_se_reader">NFC internal SE reader</string>
    <string name="hce_service">HCE service</string>
    <string name="my_service_description">My HCE service description</string>
    <string name="my_group_description">My HCE grouo description</string>
    <string name="write_tag">Posez un tag sur le téléphone et gardez le jusqu\'à la confirmation d\'écriture</string>
    <string name="read_tag">Posez un tag sur le téléphone et gardez le jusqu\'à la confirmation de lecture</string>
    <string name="t_l_phone">Téléphone</string>
    <string name="url">URL</string>
    <string name="other">Plain text</string>
</resources>
